# mulder

./: Downloads.md  ProjectHome.md  Source.md
Avidemux/avidemux/: ADM_lavcodec.h  ADM_preview.cpp  ADM_preview.h  CMakeLists.txt  avi_vars.h  gtk_gui.cpp  gtkgui.h  gui_action.cpp  gui_action.names  gui_autodrive.cpp  main.cpp  prefs.h  prefs.in  subdirs
Avidemux/avidemux/ADM_audio/: ADM_a52info.cpp  ADM_aacinfo.cpp  ADM_dcainfo.cpp  ADM_mp3info.h  CMakeLists.txt  audio_mpegidentify.cpp  audio_packetizer.cpp  audioac3ex.cpp  audioex.h  audiosource_ext.h  audiotimeline.cpp
Avidemux/avidemux/ADM_audiocodec/: ADM_audiocodec.cpp  ADM_codecimaadpcm.cpp  ADM_codeculaw.cpp  ADM_codecwma.cpp  ADM_lpcm.cpp
Avidemux/avidemux/ADM_audiodevice/: CMakeLists.txt  audio_out.h
Avidemux/avidemux/ADM_audiofilter/: CMakeLists.txt  audio_raw.h  audiodeng_buildfilters.cpp  audioeng_buff.cpp  audiofilter_buildchain.cpp  audioprocess.hxx
Avidemux/avidemux/ADM_codecs/: ADM_codec.h  ADM_codecNull.h  ADM_ffmp43.cpp  ADM_ffmp43.h  ADM_ffmpeg.cpp  ADM_ffmpeg.h  ADM_uyvy.h  CMakeLists.txt
Avidemux/avidemux/ADM_core/include/: ADM_assert.h  ADM_cpuCap.h  ADM_default.h  ADM_dynamicLoading.h  ADM_files.h  ADM_inttype.h  ADM_mangle.h  ADM_translate.h
Avidemux/avidemux/ADM_core/src/: ADM_cpuCap.cpp  ADM_dynamicLoading.cpp  ADM_memsupport.cpp  ADM_misc.cpp  ADM_win32.cpp  CMakeLists.txt  TLK_clock.cpp
Avidemux/avidemux/ADM_coreAudio/include/: ADM_audioCodecEnum.h  ADM_audiodef.h  audioencoder.h  audioencoderInternal.h
Avidemux/avidemux/ADM_coreAudio/src/: CMakeLists.txt
Avidemux/avidemux/ADM_coreImage/include/: ADM_confCouple.h  ADM_image.h  ADM_rgb.h  ADM_vidFieldUtil.h  ADM_videoFilter.h  ADM_videoFilterDynamic.h  ADM_videoFilter_iface.h  ADM_videoFilter_internal.h
Avidemux/avidemux/ADM_coreImage/src/: ADM_confCouple.cpp  ADM_imageUtils.cpp  ADM_pp.cpp  ADM_rgb.cpp  ADM_vidFieldBlend.cpp  ADM_vidFieldUtil.cpp  ADM_videoFilterCache.cpp  CMakeLists.txt  rgb2yuv.cpp  yuv.cpp
Avidemux/avidemux/ADM_coreUI/include/: DIA_coreToolkit.h  DIA_coreUI_internal.h  DIA_factory.h
Avidemux/avidemux/ADM_editor/: ADM_Video.cpp  ADM_Video.h  ADM_edAudio.hxx  ADM_edFrameType.cpp  ADM_edIdentify.cpp  ADM_edSearch.cpp  ADM_edStub.cpp  ADM_edit.cpp  ADM_outputfmt.h  ADMedAVIAUD.cpp  CMakeLists.txt
Avidemux/avidemux/ADM_encoder/: ADM_encCodecDesc.h  ADM_externalEncoder.cpp  ADM_externalEncoder.h  ADM_pluginLoad.cpp  ADM_pluginLoad.h  ADM_vidEncode.hxx  CMakeLists.txt  adm_encConfig.cpp  adm_encConfig.h  adm_encCopy.cpp  adm_encRequant.cpp  adm_encffmatrix.h  adm_encmjpeg.cpp  adm_encmpeg2enc.h  adm_encoder.cpp  adm_encoder.h
Avidemux/avidemux/ADM_filter/: CMakeLists.txt  filter.cpp  filter_declaration.cpp  vidVCD.cpp  vidVCD.h
Avidemux/avidemux/ADM_icons/xpm/: Makefile  audio_volume_medium.inc  filter3.inc  filter4.inc  filter5.inc  filter6.inc  filter7.inc  next_black_frame.inc  play.inc  stock_allow_effects.inc  stock_filters_aging.inc
Avidemux/avidemux/ADM_infoExtractor/: ADM_infoextractor.cpp  CMakeLists.txt
Avidemux/avidemux/ADM_inputs/ADM_asf/: ADM_asf.cpp  ADM_asf_audio.cpp
Avidemux/avidemux/ADM_inputs/ADM_avsproxy/: ADM_avsproxy.h  CMakeLists.txt
Avidemux/avidemux/ADM_inputs/ADM_flv/: ADM_flv.cpp  ADM_flv.h
Avidemux/avidemux/ADM_inputs/ADM_h263/: ADM_h263.h
Avidemux/avidemux/ADM_inputs/ADM_inpics/: CMakeLists.txt
Avidemux/avidemux/ADM_inputs/ADM_matroska/: ADM_mkvEntries.cpp  ADM_mkvIndexer.cpp  ADM_mkvTrackType.cpp  ADM_mkv_audio.cpp
Avidemux/avidemux/ADM_inputs/ADM_mp4/: ADM_atom.cpp  ADM_mp4.cpp  ADM_mp4.h  ADM_mp4Analyzer.cpp  ADM_mp4audio.cpp
Avidemux/avidemux/ADM_inputs/ADM_mpegdemuxer/: ADM_tsGetBits.cpp  CMakeLists.txt  dmx_audio.cpp  dmx_demuxer.h  dmx_demuxerES.cpp  dmx_demuxerMSDVR.cpp  dmx_indexer_internal.h  dmx_indexer_mpeg2.cpp  dmx_indexer_vc1.cpp  dmx_io.cpp  dmx_probe.cpp  (+2 more)
Avidemux/avidemux/ADM_libraries/: CMakeLists.txt
Avidemux/avidemux/ADM_ocr/: ADM_ocr.h  ADM_ocrEngine.cpp  ADM_ocrInternal.h  adm_glyph.cpp  adm_glyph.h
Avidemux/avidemux/ADM_osSupport/: ADM_debugID.h  ADM_quota.cpp  CMakeLists.txt
Avidemux/avidemux/ADM_outputs/: ADM_lavformat.cpp  ADM_lavformat.h  CMakeLists.txt
Avidemux/avidemux/ADM_plugin/: ADM_plugin_translate.h  ADM_vidEnc_plugin.h
Avidemux/avidemux/ADM_requant/: getvlc.h
Avidemux/avidemux/ADM_script/: ADM_JSAudioTrackInfo.cpp  ADM_JSAvidemux.cpp  ADM_JSAvidemuxAudio.h  ADM_JSAvidemuxVideo.cpp  ADM_JSDFMenu.cpp  ADM_JSDFMenu.h  ADM_JSFunctions.cpp  ADM_JSGlobal.cpp  ADM_JSGlobal.h  CMakeLists.txt
Avidemux/avidemux/ADM_toolkit/: automation.cpp
Avidemux/avidemux/ADM_video/: ADM_vidRaw.cpp
Avidemux/avidemux/ADM_videoFilter/: ADM_vidDvbSub.cpp  ADM_vidVobSub.h  ADM_vidVobSubBitmap.h  ADM_vidVobSubRender.cpp  ADMmpdetc.cpp
trunk/Avidemux/: CMakeLists.txt  Doxyfile  bootStrap.sh
trunk/Avidemux/addons/: ad2_copy_nuv
trunk/Avidemux/admin/: am_edit  debianrules  libtool.m4.in  mkinstalldirs  prefs_gen.pl
trunk/Avidemux/avidemux/: CMakeLists.txt  button_mapping  gtk_gui.cpp  gui_action.hxx  gui_action.names  gui_navigate.cpp  gui_savenew.cpp  guiplay.cpp  main.cpp  prefs.h  prototype.h
trunk/Avidemux/cmake/: FindUnix2Dos.cmake  Ts.cmake  admCheckAudioDeviceLibs.cmake  admCheckAudioEncoderLibs.cmake  admCheckGtk.cmake  admCheckQt4.cmake  admCheckRequiredLibs.cmake  admCheckX264.cmake  admConfigHelper.cmake  admFFmpegBuild.cmake  admFFmpegPatch.cmake  admFFmpegUtil.cmake  admPluginConfigSummary.cmake  admPluginVideoEncoder.cmake  admWin32.rc.in  ae_plugin.cmake  av_plugin.cmake  config.h.cmake  vf_plugin.cmake  vf_plugin_cli.cmake
trunk/Avidemux/cmake_compile_check/: aften_check.cpp
trunk/Avidemux/plugins/: CMakeLists.txt
trunk/Avidemux/po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  avidemux.pot  avidemux.pro  avidemux_ca.ts  avidemux_cs.ts  avidemux_de.ts  avidemux_el.ts  avidemux_es.ts  avidemux_it.ts  avidemux_ja.ts  avidemux_pl.ts  avidemux_ru.ts  avidemux_zh_TW.ts  bg.po  ca.po  cs.po  de.po  el.po  fr.po  hu.po  it.po  ja.po  pl.po  pt_BR.po  qt_cs.ts  qt_filter_context.xslt  qt_it.ts  ru.po  tr.po  zh_TW.po
(+2494 files in other folders)
