INCLUDE(ad_plugin)
INCLUDE(admCheckVorbisDec)
checkvorbis()
IF (USE_LIBVORBIS)

	SET(ADM_ad_vorbis_SRCS ADM_ad_vorbis.cpp)

	ADD_LIBRARY(ADM_ad_vorbis SHARED ${ADM_ad_vorbis_SRCS})

	TARGET_LINK_LIBRARIES(ADM_ad_vorbis ${LIBVORBIS_LIBRARY_DIR})
	TARGET_LINK_LIBRARIES(ADM_ad_vorbis ${LIBVORBISENC_LIBRARY_DIR})

	ADD_TARGET_CFLAGS(ADM_ad_vorbis "-I${LIBVORBIS_INCLUDE_DIR}")

	INIT_AUDIO_PLUGIN(ADM_ad_vorbis)
	INSTALL_AUDIODECODER(ADM_ad_vorbis)
ENDIF (USE_LIBVORBIS)
