INCLUDE(admCheckXvid)
INCLUDE(admPluginVideoEncoder)

checkXvid()

IF (XVID_FOUND)
	checkLibxml2()

	IF (LIBXML2_FOUND)
		SET(QT_PLUGIN_NAME "ADM_vidEnc_Xvid_Qt")
		SET(GTK_PLUGIN_NAME "ADM_vidEnc_Xvid_Gtk")
		
		SET(PLUGIN_SCHEMA_DIR "xvid")
		SET(PLUGIN_CONFIG_DIR "xvid")

		INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${XVID_INCLUDE_DIR} ${LIBXML2_INCLUDE_DIR} ../common/pluginOptions)
		ADD_DEFINITIONS(${LIBXML2_DEFINITIONS} -DPLUGIN_CONFIG_DIR="${PLUGIN_CONFIG_DIR}")

		SET(ADM_vidEnc_xvid_SRCS interface.c  encoder.cpp  xvidOptions.cpp  configGuiLoader.cpp)

		CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake" "${CMAKE_CURRENT_BINARY_DIR}/config.h")

		ADD_SUBDIRECTORY(gtk)
		ADD_SUBDIRECTORY(qt4)
		ADD_LIBRARY(ADM_vidEnc_xvid SHARED ${ADM_vidEnc_xvid_SRCS})
		TARGET_LINK_LIBRARIES(ADM_vidEnc_xvid ADM_core ${XVID_LIBRARY_DIR} ${LIBXML2_LIBRARIES} ADM_vidEnc_pluginOptions)

		INIT_VIDEO_ENCODER_PLUGIN(ADM_vidEnc_xvid)
		INSTALL_VIDEO_ENCODER(ADM_vidEnc_xvid)
		INSTALL(FILES XvidParam.xsd DESTINATION "${VIDENC_INSTALL_DIR}${PLUGIN_SCHEMA_DIR}")
	ENDIF (LIBXML2_FOUND)
ENDIF (XVID_FOUND)